--- a/orcamento.html
+++ b/orcamento.html
@@ -7,14 +7,14 @@
 
   <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 
-  <link rel="preload" href="./css/style.min.css" as="style">
-  <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="preload" href="./css/style.css" as="style">
+  <link rel="stylesheet" href="./css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
-  <title>Orçamento | Bike</title>
+  <title>Orçamento | Fone</title>
   <meta name="description" content="Orçamento">
   <script>
     document.documentElement.classList.add("js");
@@ -26,15 +26,14 @@
     <div class="header container">
       <div class="logo">
         <a href="../index.html">
-          <svg width="136" height="32" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M5.04 13.196c.648-.96 1.536-1.74 2.664-2.34 1.152-.6 2.46-.9 3.924-.9 1.704 0 3.24.42 4.608 1.26 1.392.84 2.484 2.04 3.276 3.6.816 1.536 1.224 3.324 1.224 5.364s-.408 3.852-1.224 5.436c-.792 1.56-1.884 2.772-3.276 3.636-1.368.864-2.904 1.296-4.608 1.296-1.488 0-2.796-.288-3.924-.864-1.104-.6-1.992-1.368-2.664-2.304v2.844H0V3.584h5.04v9.612Zm10.548 6.984c0-1.2-.252-2.232-.756-3.096-.48-.888-1.128-1.56-1.944-2.016a5.104 5.104 0 0 0-2.592-.684c-.912 0-1.776.24-2.592.72-.792.456-1.44 1.128-1.944 2.016-.48.888-.72 1.932-.72 3.132 0 1.2.24 2.244.72 3.132.504.888 1.152 1.572 1.944 2.052.816.456 1.68.684 2.592.684.936 0 1.8-.24 2.592-.72.816-.48 1.464-1.164 1.944-2.052.504-.888.756-1.944.756-3.168ZM26.954 7.904c-.888 0-1.632-.276-2.232-.828-.576-.576-.864-1.284-.864-2.124 0-.84.288-1.536.864-2.088.6-.576 1.344-.864 2.232-.864.888 0 1.62.288 2.196.864.6.552.9 1.248.9 2.088 0 .84-.3 1.548-.9 2.124-.576.552-1.308.828-2.196.828Zm2.484 2.376v19.944h-5.04V10.28h5.04Zm16.788 19.944-6.768-8.496v8.496h-5.04V3.584h5.04V18.74l6.696-8.46h6.552l-8.784 10.008 8.856 9.936h-6.552Zm6.919-9.972c0-2.064.42-3.864 1.26-5.4.84-1.56 2.004-2.76 3.492-3.6 1.488-.864 3.192-1.296 5.112-1.296 2.472 0 4.512.624 6.12 1.872 1.632 1.224 2.724 2.952 3.276 5.184H66.97c-.288-.864-.78-1.536-1.476-2.016-.672-.504-1.512-.756-2.52-.756-1.44 0-2.58.528-3.42 1.584-.84 1.032-1.26 2.508-1.26 4.428 0 1.896.42 3.372 1.26 4.428.84 1.032 1.98 1.548 3.42 1.548 2.04 0 3.372-.912 3.996-2.736h5.436c-.552 2.16-1.644 3.876-3.276 5.148-1.632 1.272-3.672 1.908-6.12 1.908-1.92 0-3.624-.42-5.112-1.26a9.161 9.161 0 0 1-3.492-3.6c-.84-1.56-1.26-3.372-1.26-5.436h-.001Zm26.993-6.876a7.133 7.133 0 0 1 2.52-2.484c1.056-.6 2.256-.9 3.6-.9v5.292h-1.332c-1.584 0-2.784.372-3.6 1.116-.792.744-1.188 2.04-1.188 3.888v9.936h-5.04V10.28h5.04v3.096Zm21.574 14.004c-.552.912-1.452 1.68-2.7 2.304-1.248.6-2.592.9-4.032.9-1.248 0-2.376-.252-3.384-.756s-1.8-1.2-2.376-2.088c-.576-.888-.864-1.908-.864-3.06 0-1.848.684-3.36 2.052-4.536 1.392-1.176 3.468-1.764 6.228-1.764h5.076c-.048-1.272-.42-2.28-1.116-3.024-.672-.768-1.608-1.152-2.808-1.152-1.056 0-1.932.288-2.628.864-.696.552-1.14 1.332-1.332 2.34h-5.04c.24-1.44.756-2.724 1.548-3.852a8.143 8.143 0 0 1 3.168-2.664c1.32-.648 2.796-.972 4.428-.972 1.68 0 3.192.348 4.536 1.044a7.7 7.7 0 0 1 3.204 2.988c.768 1.296 1.152 2.82 1.152 4.572v11.7h-5.112V27.38Zm-5.256-.864c.84 0 1.656-.18 2.448-.54.816-.36 1.488-.9 2.016-1.62.528-.72.792-1.572.792-2.556v-.144h-4.788c-1.152 0-2.016.228-2.592.684-.552.456-.828 1.056-.828 1.8 0 .72.252 1.296.756 1.728.528.432 1.26.648 2.196.648Zm20.997-12.096v15.804h-5.112V14.42h-2.268v-4.14h2.268V9.272c0-2.448.696-4.248 2.088-5.4 1.392-1.152 3.492-1.692 6.3-1.62V6.5c-1.224-.024-2.076.18-2.556.612s-.72 1.212-.72 2.34v.828h6.55V5.348h5.076v4.932h4.464v4.14h-4.464v9.648c0 .672.156 1.164.468 1.476.336.288.888.432 1.656.432h2.34v4.248h-3.168c-4.248 0-6.372-2.064-6.372-6.192V14.42h-6.55Z" fill="#ffffff" />
-          </svg></a>
+          <img src="/img/nove.svg" alt="Logo" width="120" height="32">
+        </a>
       </div>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m">
-          <li><a href="bicicletas.html">Bicicletas</a></li>
-          <li><a href="./seguros.html">Seguros</a></li>
-          <li><a href="./contato.html">Contato</a></li>
+          <li><a href="../earphones.html">Earphones</a></li>
+          <li><a href="../seguros.html">Seguros</a></li>
+          <li><a href="../contato.html">Contato</a></li>
         </ul>
       </nav>
     </div>
@@ -42,96 +41,97 @@
   <main>
     <div class="titulo-bg">
       <div class="titulo container">
-        <p class="font-2-l-b cor-06">Cotações no seu email</p>
-        <h1 class="font-1-xxl cor-01">solicite um orçamento<span class="cor-p1">.</span></h1>
+        <p class="font-2-l-b cor-06 fadeInLeft" data-anime="100">Cotações no seu email</p>
+        <h1 class="font-1-xxl cor-01 fadeInLeft" data-anime="100">solicite um orçamento<span class="cor-p0">.</span></h1>
       </div>
 
     </div>
     <form class="orcamento container" action="./">
 
-      <div class="orcamento-produto">
-        <h2 class="font-1-xs cor-06">Bike ou Seguro?</h2>
+      <div class="orcamento-produto fadeInLeft" data-anime="500">
+        <h2 class="font-1-xs cor-02">fone ou Seguro?</h2>
 
 
-        <input type="radio" id="bike" name="tipo" value="bike">
-        <label for="bike">Bike</label>
+        <input type="radio" id="fone" name="tipo" value="fone">
+        <label for="fone">Fone</label>
 
         <input type="radio" id="seguro" name="tipo" value="seguro">
         <label for="seguro">Seguro</label>
 
 
-        <div class="orcamento-conteudo" id="orcamento-bike">
-          <h2 class="font-1-xs cor-06">Escolha a sua</h2>
-          <input type="radio" id="nimbus" name="produto" value="Nimbus">
-          <label for="nimbus">Nimbus Stark <span>R$ 4999</span></label>
+        <div class="orcamento-conteudo" id="orcamento-fone">
+          <h2 class="font-1-xs cor-06">Escolha o seu</h2>
+
+          <input type="radio" id="earpods" name="produto" value="earpods">
+          <label for="earpods">EarPods<span>R$ 1199</span></label>
           <div class="orcamento-detalhes">
-            <ul class="font-1-xs cor-09">
+            <ul class="font-1-xs cor-11">
               <li>
-                <img src="./img/icones/eletrica.svg" alt="">
-                Motor Elétrico
+                <img src="./img/icones/sound.svg" alt="" height="24" width="24">
+                Áudio 9s
               </li>
               <li>
-                <img src="./img/icones/carbono.svg" alt="">
-                Fibra de carbono
+                <img src="./img/icones/carbono.svg" alt="" height="24" width="24">
+                Resistentes a suor e água
               </li>
               <li>
-                <img src="./img/icones/velocidade.svg" alt="">
-                50 km/h
+                <img src="./img/icones/charge.svg" alt="" height="24" width="24">
+                5 horas de áudio*
               </li>
               <li>
-                <img src="./img/icones/rastreador.svg" alt="">
+                <img src="./img/icones/rastreador.svg" alt="" height="24" width="24">
                 Rastreador
               </li>
             </ul>
-            <picture><img src="./img/bicicletas/nimbus.jpg" alt="bike preta"></picture>
+            <picture><img src="./img/fones-fotos/fone-1pr.jpg" alt="fone preta"></picture>
           </div>
 
-          <input type="radio" id="magic" name="produto" value="magic">
-          <label for="magic">Magic Might <span>R$ 2699</span></label>
+          <input type="radio" id="maxpods" name="produto" value="maxpods">
+          <label for="maxpods">MaxPods <span>R$ 2199</span></label>
           <div class="orcamento-detalhes">
-            <ul class="font-1-xs cor-09">
+            <ul class="font-1-xs cor-11">
               <li>
-                <img src="./img/icones/eletrica.svg" alt="">
-                Motor Elétrico
+                <img src="./img/icones/sound.svg" alt="" height="24" width="24">
+                Áudio 9s
               </li>
               <li>
-                <img src="./img/icones/carbono.svg" alt="">
-                Fibra de carbono
+                <img src="./img/icones/carbono.svg" alt="" height="24" width="24">
+                Resistentes a suor e água
               </li>
               <li>
-                <img src="./img/icones/velocidade.svg" alt="">
-                45 km/h
+                <img src="./img/icones/charge.svg" alt="" height="24" width="24">
+                18 horas de áudio*
               </li>
               <li>
-                <img src="./img/icones/rastreador.svg" alt="">
+                <img src="./img/icones/rastreador.svg" alt="" height="24" width="24">
                 Rastreador
               </li>
             </ul>
-            <picture><img src="./img/bicicletas/magic.jpg" alt="bike preta"></picture>
+            <picture><img src="./img/fones-fotos/fone-3pr.jpg" alt="fone preta"></picture>
           </div>
 
-          <input type="radio" id="nebula" name="produto" value="nebula">
-          <label for="nebula">Nebula Cosmic <span>R$ 3999</span></label>
+          <input type="radio" id="ultrapods" name="produto" value="ultrapods">
+          <label for="ultrapods">UltraPods<span>R$ 3899</span></label>
           <div class="orcamento-detalhes">
-            <ul class="font-1-xs cor-09">
+            <ul class="font-1-xs cor-11">
               <li>
-                <img src="./img/icones/eletrica.svg" alt="">
-                Motor Elétrico
+                <img src="./img/icones/sound.svg" alt="" height="24" width="24">
+                Áudio 12s
               </li>
               <li>
-                <img src="./img/icones/carbono.svg" alt="">
-                Fibra de carbono
+                <img src="./img/icones/carbono.svg" alt="" height="24" width="24">
+                Resistentes a suor e água
               </li>
               <li>
-                <img src="./img/icones/velocidade.svg" alt="">
-                50 km/h
+                <img src="./img/icones/charge.svg" alt="" height="24" width="24">
+                12 horas de áudio*
               </li>
               <li>
-                <img src="./img/icones/rastreador.svg" alt="">
+                <img src="./img/icones/rastreador.svg" alt="" height="24" width="24">
                 Rastreador
               </li>
             </ul>
-            <picture><img src="./img/bicicletas/nebula.jpg" alt="bike branca"></picture>
+            <picture><img src="./img/fones-fotos/fone-2pr.jpg" alt="fone branca"></picture>
           </div>
 
         </div>
@@ -139,16 +139,16 @@
         <div class="orcamento-conteudo" id="orcamento-seguro">
           <h2 class="font-1-xs cor-06">Escolha o seu plano</h2>
 
-          <input type="radio" id="prata" name="plano" value="prata">
-          <label for="prata">Prata <span>R$ 199</span></label>
+          <input type="radio" id="basico" name="plano" value="basico">
+          <label for="basico">Básico <span>R$ 199</span></label>
 
-          <input type="radio" id="ouro" name="plano" value="ouro">
-          <label for="ouro">Ouro <span>R$ 299</span></label>
+          <input type="radio" id="essencial" name="plano" value="essencial">
+          <label for="essencial">Essencial <span>R$ 299</span></label>
         </div>
 
       </div>
 
-      <div class="orcamento-dados form-01">
+      <div class="orcamento-dados form-01 fadeInRight" data-anime="500">
         <h2 class="font-1-xs cor-10 coluna-2">dados pessoais</h2>
         <div>
           <label for="nome">Nome</label>
@@ -192,7 +192,7 @@
           <label for="estado">Estado</label>
           <input type="text" id="estado" name="estado">
         </div>
-        <button class="button-1 coluna-2">solicitar orçamento</button>
+        <button class="button-2 coluna-2">solicitar orçamento</button>
       </div>
     </form>
   </main>
@@ -200,46 +200,52 @@
 
   <footer class="footer-bg">
     <div class="footer container">
+
       <div class="logo">
         <a href="../index.html">
-          <svg width="136" height="32" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M5.04 13.196c.648-.96 1.536-1.74 2.664-2.34 1.152-.6 2.46-.9 3.924-.9 1.704 0 3.24.42 4.608 1.26 1.392.84 2.484 2.04 3.276 3.6.816 1.536 1.224 3.324 1.224 5.364s-.408 3.852-1.224 5.436c-.792 1.56-1.884 2.772-3.276 3.636-1.368.864-2.904 1.296-4.608 1.296-1.488 0-2.796-.288-3.924-.864-1.104-.6-1.992-1.368-2.664-2.304v2.844H0V3.584h5.04v9.612Zm10.548 6.984c0-1.2-.252-2.232-.756-3.096-.48-.888-1.128-1.56-1.944-2.016a5.104 5.104 0 0 0-2.592-.684c-.912 0-1.776.24-2.592.72-.792.456-1.44 1.128-1.944 2.016-.48.888-.72 1.932-.72 3.132 0 1.2.24 2.244.72 3.132.504.888 1.152 1.572 1.944 2.052.816.456 1.68.684 2.592.684.936 0 1.8-.24 2.592-.72.816-.48 1.464-1.164 1.944-2.052.504-.888.756-1.944.756-3.168ZM26.954 7.904c-.888 0-1.632-.276-2.232-.828-.576-.576-.864-1.284-.864-2.124 0-.84.288-1.536.864-2.088.6-.576 1.344-.864 2.232-.864.888 0 1.62.288 2.196.864.6.552.9 1.248.9 2.088 0 .84-.3 1.548-.9 2.124-.576.552-1.308.828-2.196.828Zm2.484 2.376v19.944h-5.04V10.28h5.04Zm16.788 19.944-6.768-8.496v8.496h-5.04V3.584h5.04V18.74l6.696-8.46h6.552l-8.784 10.008 8.856 9.936h-6.552Zm6.919-9.972c0-2.064.42-3.864 1.26-5.4.84-1.56 2.004-2.76 3.492-3.6 1.488-.864 3.192-1.296 5.112-1.296 2.472 0 4.512.624 6.12 1.872 1.632 1.224 2.724 2.952 3.276 5.184H66.97c-.288-.864-.78-1.536-1.476-2.016-.672-.504-1.512-.756-2.52-.756-1.44 0-2.58.528-3.42 1.584-.84 1.032-1.26 2.508-1.26 4.428 0 1.896.42 3.372 1.26 4.428.84 1.032 1.98 1.548 3.42 1.548 2.04 0 3.372-.912 3.996-2.736h5.436c-.552 2.16-1.644 3.876-3.276 5.148-1.632 1.272-3.672 1.908-6.12 1.908-1.92 0-3.624-.42-5.112-1.26a9.161 9.161 0 0 1-3.492-3.6c-.84-1.56-1.26-3.372-1.26-5.436h-.001Zm26.993-6.876a7.133 7.133 0 0 1 2.52-2.484c1.056-.6 2.256-.9 3.6-.9v5.292h-1.332c-1.584 0-2.784.372-3.6 1.116-.792.744-1.188 2.04-1.188 3.888v9.936h-5.04V10.28h5.04v3.096Zm21.574 14.004c-.552.912-1.452 1.68-2.7 2.304-1.248.6-2.592.9-4.032.9-1.248 0-2.376-.252-3.384-.756s-1.8-1.2-2.376-2.088c-.576-.888-.864-1.908-.864-3.06 0-1.848.684-3.36 2.052-4.536 1.392-1.176 3.468-1.764 6.228-1.764h5.076c-.048-1.272-.42-2.28-1.116-3.024-.672-.768-1.608-1.152-2.808-1.152-1.056 0-1.932.288-2.628.864-.696.552-1.14 1.332-1.332 2.34h-5.04c.24-1.44.756-2.724 1.548-3.852a8.143 8.143 0 0 1 3.168-2.664c1.32-.648 2.796-.972 4.428-.972 1.68 0 3.192.348 4.536 1.044a7.7 7.7 0 0 1 3.204 2.988c.768 1.296 1.152 2.82 1.152 4.572v11.7h-5.112V27.38Zm-5.256-.864c.84 0 1.656-.18 2.448-.54.816-.36 1.488-.9 2.016-1.62.528-.72.792-1.572.792-2.556v-.144h-4.788c-1.152 0-2.016.228-2.592.684-.552.456-.828 1.056-.828 1.8 0 .72.252 1.296.756 1.728.528.432 1.26.648 2.196.648Zm20.997-12.096v15.804h-5.112V14.42h-2.268v-4.14h2.268V9.272c0-2.448.696-4.248 2.088-5.4 1.392-1.152 3.492-1.692 6.3-1.62V6.5c-1.224-.024-2.076.18-2.556.612s-.72 1.212-.72 2.34v.828h6.55V5.348h5.076v4.932h4.464v4.14h-4.464v9.648c0 .672.156 1.164.468 1.476.336.288.888.432 1.656.432h2.34v4.248h-3.168c-4.248 0-6.372-2.064-6.372-6.192V14.42h-6.55Z" fill="#ffffff" />
-          </svg></a>
+          <img src="/img/nove.svg" alt="Logo" width="120" height="32"></a>
       </div>
-      <div class="footer-contato">
-        <h3 class="font-2-l-b cor-01">Contato</h3>
-        <ul class="font-2-m cor-06">
-          <li><a href="tel:+5583981857179">+55 83 98185-7179</a></li>
-          <li><a href="mailto:danielalves672@gmail.com">danielalves672@gmail.com</a></li>
-          <li>Rua Ali perto 42, Universitário</li>
-          <li>Campina Grande, Paraíba</li>
-        </ul>
-      </div>
-      <div class="footer-redes">
-        <a href="/">
-          <img src="./img/redes/instagram.svg" alt="Instagram">
-        </a>
-        <a href="/">
-          <img src="./img/redes/facebook.svg" alt="Facebook">
-        </a>
-        <a href="/">
-          <img src="./img/redes/youtube.svg" alt="Youtube">
-        </a>
-      </div>
-      <div class="footer-informacoes">
-        <h3 class="font-2-l-b cor-01">Informações</h3>
-        <nav>
-          <ul class="font-1-m cor-05">
-            <li><a href="../bicicletas.html">Bicicletas</a></li>
-            <li><a href="../seguros.html">Seguros</a></li>
-            <li><a href="../contato.html">Contato</a></li>
-            <li><a href="../termos.html">Termos e Condições</a></li>
+
+      <div class="content-footer">
+        <div class="footer-contato">
+          <h3 class="font-2-l-b cor-01">Contato</h3>
+          <ul class="font-2-m cor-06">
+            <li><a href="tel:+5583981857179">+55 99 99999-9999</a></li>
+            <li><a href="contato@nove.com">contato@nove.com</a></li>
+            <li>Rua Nove 99, Universitário</li>
+            <li>Campina Grande, Paraíba</li>
           </ul>
-        </nav>
+        </div>
+        <div class="footer-redes">
+          <a href="/">
+            <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram">
+          </a>
+          <a href="/">
+            <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook">
+          </a>
+          <a href="/">
+            <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube">
+          </a>
+        </div>
+
+        <div class="footer-informacoes">
+          <h3 class="font-2-l-b cor-01">Informações</h3>
+          <nav>
+            <ul class="font-1-m cor-06">
+              <li><a href="../earphones.html">Earphones</a></li>
+              <li><a href="../seguros.html">Seguros</a></li>
+              <li><a href="../contato.html">Contato</a></li>
+              <li><a href="../termos.html">Termos e Condições</a></li>
+            </ul>
+          </nav>
+        </div>
+
       </div>
-      <p class="footer-copy font-2-m cor-05 ">Bikcraft - Alguns direitos reservados.</p>
+
+      <p class="footer-copy font-2-m cor-05 ">Nove - Nome e imagens ilustrativas.</p>
     </div>
   </footer>
+  <script src="./js/plugins/simple-anime.js"></script>
   <script src="./js/script.js"></script>
 </body>
 
